added grid test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en" class="oldie">
 <![endif]-->
 <!--[if gt IE 9]><!-->
-<html lang="en">
+
+    <html lang="en">
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
@@ -15,6 +16,7 @@
 -->
 
 
+
 <title>Pig-Pen Tribute</title>
 
 <style>
@@ -23,13 +25,16 @@
         max-width: 100%;
         height: auto;
     }
-    </style>
+
+</style>
 
 </head>
 
 
 
 <body >
+
+
 
 <Div id="main" class="main">
 
@@ -40,7 +45,7 @@
     </p>
 
     <div id="img-div">
-        <figure  align= "center";>
+        <figure  align= "left";>
             <img
             id="image"
             src="PigPen.png"
@@ -60,6 +65,9 @@
 </div>
 
 </body>
+<script>
+    bundle.js
+</script>
 </html>
 
 
