--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
     <style>
         
+        .main{
+            text-align: center;
+        }
+
         img {
             display: block;
             max-width: 80%;
