centered alignment, reduced font-size of caption

--- a/index.html
+++ b/index.html
@@ -46,14 +46,22 @@
 
     <style>
         
-        .main{
+        #main {
+            margin: auto;
+            max-width: 60%;
             text-align: center;
         }
 
         img {
             display: block;
-            max-width: 80%;
+            max-width: 60%;
             height: auto;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #img-caption {
+            font-size: 0.65em; /* 14px/16=0.875em */
             margin-left: auto;
             margin-right: auto;
         }
@@ -75,7 +83,7 @@
                 </p>
 
                 <div id="img-div">
-                    <figure  align= "left";>
+                    <figure  align= "center";>
                         <img
                         id="image"
                         src="PigPen.png"
